# loggerCpp

./: .gitignore  CMakeLists.txt  README.md
docs/: LibraryUsage.md
include/: LogLevel.hpp  LogMessage.hpp  Logger.hpp
include/Sink/: ConsoleSink.hpp  FileSink.hpp  Sink.hpp
source/: CMakeLists.txt  LogMessage.cpp  Logger.cpp
source/Sink/: ConsoleSink.cpp  FileSink.cpp
test/: CMakeLists.txt  LogMessage_Test.cpp  Logger_Test.cpp
test/Sink/: ConsoleSink_Test.cpp  FileSink_Test.cpp
